Changes Props Sending

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,37 @@
 {
   "cSpell.words": [
+    "addtransctionamount",
+    "addtransctionname",
+    "adipiscing",
+    "ALLTRANSACTION",
+    "alltransactions",
+    "amet",
+    "ampm",
     "arjun",
+    "Categary",
+    "Conrainer",
+    "Credite",
+    "Dach",
+    "elit",
+    "hasura",
     "isha",
     "janedoe",
+    "Leaderboard",
+    "lightgray",
     "phani",
     "piyush",
+    "Prargraph",
     "radha",
     "rahul",
     "ramesh",
+    "reactjs",
     "samsmith",
     "seema",
+    "sidbar",
     "suresh",
-    "teja"
+    "teja",
+    "testid",
+    "Transction",
+    "uuidv"
   ]
 }
