--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
+    "recharts": "^2.12.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,9 +43,11 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "typescript": "^5.3.3"
   }
 }
